# pentomino

./: .gitignore  CMakeLists.txt  main.cpp
include/: Board.h  Figures.h  Point.h  Shape.h
src/: Board.cpp  Figures.cpp  PentoShape.cpp  PentoShape.h  PentoSolver.cpp  PentoSolver.h  Point.cpp  Point.hpp  Shape.cpp  Shape.hpp  main.cpp
